<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="371dp"
        android:id="@+id/layoutNav"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/nav_header_desc"

        app:srcCompat="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/candidateName"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:onClick="textProfile"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/candidateQualification"
            app:layout_constraintStart_toEndOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/candidateQualification"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:text="@string/nav_header_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView3" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>